546 Use events instead of direct method call